--- a/package.json
+++ b/package.json
@@ -4,6 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "install-client": "npm install --prefix client",
+    "install-server": "npm install --prefix server",
+    "install": "npm run install-client && npm run install-server",
+    "client": "npm start --prefix client",
+    "server": "npm run watch --prefix server",
+    "start": "npm run client & npm run server",
+    "deploy": "npm run build --prefix client && npm start --prefix server",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
