--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "",
+    "start": "cd src && node server.js",
     "watch": "cd src && nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
