--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -21,4 +21,4 @@ jobs:
           node-version: ${{ matrix.node-version }}
       - run: npm install
       - run: npm build --prefix client
-      - run: npm test
+      - run: npm test:ci
