--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.21.1",
+    "cors": "^2.8.5",
     "csv-parse": "^4.15.4",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
